dark mode fix 2

--- a/css/darkMode.css
+++ b/css/darkMode.css
@@ -1,8 +1,8 @@
 /* Mode clair par défaut */
-/* Mode clair par défaut */
 body.light-mode {
     background-color: #f0f0f0; /* Light background */
     color: #333; /* Dark text color for readability in light mode */
+    transition: 1s;
 }
 
 /* Explicit text color for elements within light mode */
@@ -39,6 +39,7 @@ body.light-mode .popup-content {
 body.dark-mode {
     background-color: #121212;
     color: #f5f5f5; /* Set text color to a lighter color in dark mode */
+    transition: 1s;
 }
 
 /* Explicit text color for elements within dark mode */
